--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,12 @@ testem.log
 .DS_Store
 Thumbs.db
 banking-app/.idea
-banking-app/node_modules
-banking-app/src/data
-banking-app/src/app/**/*.css
-banking-app/src/app/**/*.js
-banking-app/src/app/**/*.ts
-banking-app/src/app/**/*.html
-banking-app/src/assets
+#banking-app/node_modules
+#banking-app/src/data
+#banking-app/src/app/**/*.css
+#banking-app/src/app/**/*.js
+#banking-app/src/app/**/*.ts
+#banking-app/src/app/**/*.html
+#banking-app/src/assets
 #!banking-app/src/app/.gitkeep
-
+banking-app/src/assets/**/*
