--- a/banking-app/package.json
+++ b/banking-app/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
     "bootstrap": "^4.1.3",
     "chalk": "^2.4.1",
     "core-js": "^2.5.4",
@@ -29,6 +32,7 @@
     "flat": "^4.1.0",
     "json-server": "^0.14.0",
     "lodash": "^4.17.11",
+    "ngrx-forms": "^3.1.0",
     "rxjs": "~6.2.0",
     "validator": "^10.8.0",
     "zone.js": "~0.8.26"
